--- a/app/ios/Runner/Info.plist
+++ b/app/ios/Runner/Info.plist
@@ -45,5 +45,25 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>metamask</string>
+		<string>trust</string>
+		<string>rainbow</string>
+		<string>safe</string>
+	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>com.example.app</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>givingtree</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
