--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
     sdk: flutter
   fl_chart: ^0.66.0
   flutter_svg: ^2.0.9
+  reown_appkit: ^1.3.0
+  flutter_dotenv: ^5.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -96,3 +98,4 @@ flutter:
     - assets/images/blue_header_bg.png
     - assets/images/flower.svg
     - assets/images/
+    - .env
