--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-python-dotenv
+feedparser
+requests
+beautifulsoup4
 openai
-sentence-transformers
 chromadb
+python-dotenv
+sentence-transformers
 numpy 
