--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -93,11 +93,5 @@ flutter:
   # see https://flutter.dev/custom-fonts/#from-packages
 
   assets:
-    - assets/images/sky_bg.png
-    - assets/images/ground_fg.png
-    - assets/images/blue_header_bg.png
-    - assets/images/flower.svg
-    - assets/images/flower_heart.png
-    - assets/images/green_header_bg.png
-    - assets/images/tree.png
+    - assets/images/
     - .env
