--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -32,7 +32,8 @@ dependencies:
     sdk: flutter
   fl_chart: ^0.66.0
   flutter_svg: ^2.0.9
-  reown_appkit: ^1.3.0
+  reown_appkit:
+    path: packages/reown_appkit
   flutter_dotenv: ^5.1.0
 
   # The following adds the Cupertino Icons font to your application.
@@ -96,3 +97,7 @@ flutter:
     - assets/images/
     - assets/abi/
     - .env
+
+dependency_overrides:
+  reown_appkit:
+    path: /Users/rallin/.pub-cache/hosted/pub.dev/reown_appkit-1.3.0
