--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   reown_appkit:
     path: packages/reown_appkit
   flutter_dotenv: ^5.1.0
+  web3dart: ^2.5.0
+  web3dart_builders: ^0.0.6
+  http: ^1.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
