--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
     sdk: flutter
   fl_chart: ^0.66.0
   flutter_svg: ^2.0.9
+  reown_appkit:
+    path: packages/reown_appkit
   flutter_dotenv: ^5.1.0
   web3dart: ^2.5.0
   web3dart_builders: ^0.0.6
@@ -40,7 +42,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  reown_appkit: ^1.4.0
 
 dev_dependencies:
   flutter_test:
@@ -99,3 +100,7 @@ flutter:
     - assets/images/
     - assets/abi/
     - .env
+
+dependency_overrides:
+  reown_appkit:
+    path: /Users/rallin/.pub-cache/hosted/pub.dev/reown_appkit-1.3.0
